// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Programmatic API handles OPTIONS request by default: response 1`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "x-powered-by: Express",
  ],
  "status": 204,
  "text": "",
}
`;

exports[`Programmatic API handles OPTIONS request by default: session-details 1`] = `
{
  "headers": [
    "connection: close",
    "content-length: 15",
    "content-type: application/json; charset=utf-8",
    "etag: W/"f-XQOV7Ex+Zz6oKU7EkBkfIkg20jQ"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"requests":[]}",
}
`;

exports[`Programmatic API handles OPTIONS request by default: session-details 2`] = `
{
  "headers": [
    "connection: close",
    "content-length: 15",
    "content-type: application/json; charset=utf-8",
    "etag: W/"f-XQOV7Ex+Zz6oKU7EkBkfIkg20jQ"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"requests":[]}",
}
`;

exports[`Programmatic API handles POST requests and predicates and middleware have access to the body: response 1`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 37",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"id":123,"email":"example@test.123"}",
}
`;

exports[`Programmatic API handles POST requests and predicates and middleware have access to the body: response 2`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 17",
    "content-type: text/html; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "Received test=234",
}
`;

exports[`Programmatic API handles POST requests and predicates and middleware have access to the body: response 3`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 0",
    "x-powered-by: Express",
  ],
  "status": 404,
  "text": "",
}
`;

exports[`Programmatic API handles POST requests and predicates and middleware have access to the body: session-details 1`] = `
{
  "headers": [
    "connection: close",
    "content-length: 39",
    "content-type: application/json; charset=utf-8",
    "etag: W/"27-8/Q+IbW7jZ2tzRZSTJBF8yo08vI"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[]}",
}
`;

exports[`Programmatic API handles POST requests and predicates and middleware have access to the body: session-details 2`] = `
{
  "headers": [
    "connection: close",
    "content-length: 482",
    "content-type: application/json; charset=utf-8",
    "etag: W/"1e2-OpbOQAkjvtJqpRvwJUtKgF5fuvI"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[{"timestamp":1676886788388,"collection":"base","route":"POST_USER:success","request":{"method":"POST","url":"/user"},"response":{"statusCode":200}},{"timestamp":1676886788388,"collection":"base","route":"POST_USER:success","request":{"method":"POST","url":"/user"},"response":{"statusCode":200}},{"timestamp":1676886788388,"collection":"base","route":"POST_USER:success","request":{"method":"POST","url":"/user"},"response":{"statusCode":404}}]}",
}
`;

exports[`Programmatic API listens: getAdminServerURLs 1`] = `
[
  "http://localhost:3001/",
  "http://192.168.1.4:3001/",
  "http://fe80::1:3001/",
]
`;

exports[`Programmatic API listens: getMockServerURLs 1`] = `
[
  "http://localhost:3000/",
  "http://192.168.1.4:3000/",
  "http://fe80::1:3000/",
]
`;

exports[`Programmatic API persists fixtures when none is found: fixture 1`] = `
"[
  {
    "id": 1,
    "name": "foo",
    "email": "foo@example.com"
  },
  {
    "id": 2,
    "name": "bar",
    "email": "bar@example.com"
  },
  {
    "id": 3,
    "name": "baz",
    "email": "baz@example.com"
  }
]"
`;

exports[`Programmatic API persists fixtures when none is found: response 1`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 145",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "[{"id":1,"name":"foo","email":"foo@example.com"},{"id":2,"name":"bar","email":"bar@example.com"},{"id":3,"name":"baz","email":"baz@example.com"}]",
}
`;

exports[`Programmatic API returns all values from the fixtures when found and match: fixture 1`] = `
"[
  {
    "id": 11,
    "name": "A",
    "email": "foo@example.com"
  },
  {
    "id": 12,
    "name": "B",
    "email": "bar@example.com"
  },
  {
    "id": 13,
    "name": "C",
    "email": "baz@example.com"
  }
]"
`;

exports[`Programmatic API returns all values from the fixtures when found and match: response 1`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 142",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "[{"id":11,"name":"A","email":"foo@example.com"},{"id":12,"name":"B","email":"bar@example.com"},{"id":13,"name":"C","email":"baz@example.com"}]",
}
`;

exports[`Programmatic API returns all values from the fixtures when found, but updates when generated structure changes: fixture 1`] = `
"[
  {
    "id": 21,
    "name": "foo",
    "email": "foo@example.com"
  },
  {
    "id": 22,
    "name": "bar",
    "email": "bar@example.com"
  },
  {
    "id": 23,
    "name": "baz",
    "email": "baz@example.com"
  }
]"
`;

exports[`Programmatic API returns all values from the fixtures when found, but updates when generated structure changes: response 1`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 148",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "[{"id":21,"name":"foo","email":"foo@example.com"},{"id":22,"name":"bar","email":"bar@example.com"},{"id":23,"name":"baz","email":"baz@example.com"}]",
}
`;

exports[`Programmatic API sends CORS headers by default: response 1`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 30",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"id":1,"email":"foo@bar.baz"}",
}
`;

exports[`Programmatic API sends CORS headers by default: response 2`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 44",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 404,
  "text": "{"statusCode":404,"message":"No user found"}",
}
`;

exports[`Programmatic API sends CORS headers by default: session-details 1`] = `
{
  "headers": [
    "connection: close",
    "content-length: 39",
    "content-type: application/json; charset=utf-8",
    "etag: W/"27-8/Q+IbW7jZ2tzRZSTJBF8yo08vI"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[]}",
}
`;

exports[`Programmatic API sends files: response 1`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 59",
    "content-type: text/html; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "<!DOCTYPE html>
<html>
  <body>
    Test
  </body>
</html>
",
}
`;

exports[`Programmatic API sends files: response 2`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 29",
    "content-type: text/csv",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "1,2,3,4,5,6
11,12,13,14,15,16",
}
`;

exports[`Programmatic API sends files: session-details 1`] = `
{
  "headers": [
    "connection: close",
    "content-length: 39",
    "content-type: application/json; charset=utf-8",
    "etag: W/"27-8/Q+IbW7jZ2tzRZSTJBF8yo08vI"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[]}",
}
`;

exports[`Programmatic API sends files: session-details 2`] = `
{
  "headers": [
    "connection: close",
    "content-length: 360",
    "content-type: application/json; charset=utf-8",
    "etag: W/"168-M2FfdKx/Tig17Jv1Ha5VcCRvBx4"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[{"timestamp":1676886788388,"collection":"base","route":"DOWNLOAD_USER:success","request":{"method":"GET","url":"/user/download"},"response":{"statusCode":200}},{"timestamp":1676886788388,"collection":"base","route":"DOWNLOAD_USERS:success","request":{"method":"GET","url":"/users/download"},"response":{"statusCode":200}}]}",
}
`;

exports[`Programmatic API works with collections: response 1`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 239",
    "content-type: text/html; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "<!DOCTYPE html>
<html>
    <head>
        <title>Pseudo IAM login page</title>
    </head>
    <body>
        <h1>Welcome to Pseudo login page</h1>
        <a href="/?state=fooBar&code=cb485bf">click here to log in</a>
    </body>
</html>
",
}
`;

exports[`Programmatic API works with collections: response 2`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 2",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 401,
  "text": "{}",
}
`;

exports[`Programmatic API works with collections: response 3`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 239",
    "content-type: text/html; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "<!DOCTYPE html>
<html>
    <head>
        <title>Pseudo IAM login page</title>
    </head>
    <body>
        <h1>Welcome to Pseudo login page</h1>
        <a href="/?state=fooBar&code=cb485bf">click here to log in</a>
    </body>
</html>
",
}
`;

exports[`Programmatic API works with collections: response 4`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 21",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"accessToken":"foo"}",
}
`;

exports[`Programmatic API works with collections: response 5`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 30",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"id":1,"email":"foo@bar.baz"}",
}
`;

exports[`Programmatic API works with collections: session-details 1`] = `
{
  "headers": [
    "connection: close",
    "content-length: 15",
    "content-type: application/json; charset=utf-8",
    "etag: W/"f-XQOV7Ex+Zz6oKU7EkBkfIkg20jQ"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"requests":[]}",
}
`;

exports[`Programmatic API works with collections: session-details 2`] = `
{
  "headers": [
    "connection: close",
    "content-length: 50",
    "content-type: application/json; charset=utf-8",
    "etag: W/"32-CIEAWi/2iMVd+dZF6OdYItOTopU"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"unauthenticated","requests":[]}",
}
`;

exports[`Programmatic API works with collections: session-details 3`] = `
{
  "headers": [
    "connection: close",
    "content-length: 209",
    "content-type: application/json; charset=utf-8",
    "etag: W/"d1-Sj4w7SQiUOimUiEXp4/U3lqtjEU"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"unauthenticated","requests":[{"timestamp":1676886788388,"collection":"unauthenticated","route":"LOGIN_PAGE:success","request":{"method":"GET","url":"/login"},"response":{"statusCode":200}}]}",
}
`;

exports[`Programmatic API works with collections: session-details 4`] = `
{
  "headers": [
    "connection: close",
    "content-length: 374",
    "content-type: application/json; charset=utf-8",
    "etag: W/"176-QTTZB1OBQNF6cZn/ypFkieI5Q1E"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"unauthenticated","requests":[{"timestamp":1676886788388,"collection":"unauthenticated","route":"LOGIN_PAGE:success","request":{"method":"GET","url":"/login"},"response":{"statusCode":200}},{"timestamp":1676886788388,"collection":"unauthenticated","route":"GET_USER:unauthenticated","request":{"method":"GET","url":"/user"},"response":{"statusCode":401}}]}",
}
`;

exports[`Programmatic API works with collections: session-details 5`] = `
{
  "headers": [
    "connection: close",
    "content-length: 363",
    "content-type: application/json; charset=utf-8",
    "etag: W/"16b-ylJ9Z6hvE0Y7c4mgMMogIoePkDE"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[{"timestamp":1676886788388,"collection":"unauthenticated","route":"LOGIN_PAGE:success","request":{"method":"GET","url":"/login"},"response":{"statusCode":200}},{"timestamp":1676886788388,"collection":"unauthenticated","route":"GET_USER:unauthenticated","request":{"method":"GET","url":"/user"},"response":{"statusCode":401}}]}",
}
`;

exports[`Programmatic API works with collections: session-details 6`] = `
{
  "headers": [
    "connection: close",
    "content-length: 512",
    "content-type: application/json; charset=utf-8",
    "etag: W/"200-U+jF+dTCPZwMKtgy+dhMbYZWT0Y"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[{"timestamp":1676886788388,"collection":"unauthenticated","route":"LOGIN_PAGE:success","request":{"method":"GET","url":"/login"},"response":{"statusCode":200}},{"timestamp":1676886788388,"collection":"unauthenticated","route":"GET_USER:unauthenticated","request":{"method":"GET","url":"/user"},"response":{"statusCode":401}},{"timestamp":1676886788388,"collection":"base","route":"LOGIN_PAGE:success","request":{"method":"GET","url":"/login"},"response":{"statusCode":200}}]}",
}
`;

exports[`Programmatic API works with collections: session-details 7`] = `
{
  "headers": [
    "connection: close",
    "content-length: 667",
    "content-type: application/json; charset=utf-8",
    "etag: W/"29b-bY53OVUb68ISMI8M55LWFQ38BUY"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[{"timestamp":1676886788388,"collection":"unauthenticated","route":"LOGIN_PAGE:success","request":{"method":"GET","url":"/login"},"response":{"statusCode":200}},{"timestamp":1676886788388,"collection":"unauthenticated","route":"GET_USER:unauthenticated","request":{"method":"GET","url":"/user"},"response":{"statusCode":401}},{"timestamp":1676886788388,"collection":"base","route":"LOGIN_PAGE:success","request":{"method":"GET","url":"/login"},"response":{"statusCode":200}},{"timestamp":1676886788388,"collection":"base","route":"LOGIN_PAGE_POST:success","request":{"method":"POST","url":"/login"},"response":{"statusCode":200}}]}",
}
`;

exports[`Programmatic API works with collections: session-details 8`] = `
{
  "headers": [
    "connection: close",
    "content-length: 39",
    "content-type: application/json; charset=utf-8",
    "etag: W/"27-8/Q+IbW7jZ2tzRZSTJBF8yo08vI"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[]}",
}
`;

exports[`Programmatic API works with collections: session-details 9`] = `
{
  "headers": [
    "connection: close",
    "content-length: 184",
    "content-type: application/json; charset=utf-8",
    "etag: W/"b8-zeFvSyCx21bNoh0SiV1VNPsExNs"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[{"timestamp":1676886788388,"collection":"base","route":"GET_USER:success","request":{"method":"GET","url":"/user"},"response":{"statusCode":200}}]}",
}
`;

exports[`Programmatic API works with overrides: response:base 1`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 30",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"id":1,"email":"foo@bar.baz"}",
}
`;

exports[`Programmatic API works with overrides: response:base 2`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 30",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"id":1,"email":"foo@bar.baz"}",
}
`;

exports[`Programmatic API works with overrides: response:unauthenticated 1`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 2",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 401,
  "text": "{}",
}
`;

exports[`Programmatic API works with overrides: session-details 1`] = `
{
  "headers": [
    "connection: close",
    "content-length: 39",
    "content-type: application/json; charset=utf-8",
    "etag: W/"27-8/Q+IbW7jZ2tzRZSTJBF8yo08vI"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[]}",
}
`;

exports[`Programmatic API works with overrides: session-details 2`] = `
{
  "headers": [
    "connection: close",
    "content-length: 484",
    "content-type: application/json; charset=utf-8",
    "etag: W/"1e4-mRW00OjpW6lkfj0ezxYF2bJ/+xk"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[{"timestamp":1676886788388,"collection":"base","route":"GET_USER:success","request":{"method":"GET","url":"/user"},"response":{"statusCode":200}},{"timestamp":1676886788388,"collection":"base","route":"GET_USER:unauthenticated","request":{"method":"GET","url":"/user"},"response":{"statusCode":401}},{"timestamp":1676886788388,"collection":"base","route":"GET_USER:success","request":{"method":"GET","url":"/user"},"response":{"statusCode":200}}]}",
}
`;
